# project-MarineMate-api

./: .env  .flake8  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
config/: settings.py  urls.py
config/settings/: base.py  local.py  prod.py
example/: admin.py  models.py  serializers.py  urls.py  views.py
example/migrations/: 0001_initial.py  0002_alter_accident_table_alter_beach_table_and_more.py  0002_remove_accident_report_arrival_hour_and_more.py  0002_remove_jellyfishscore_beach_id.py  0003_remove_beach_id_beach_beach_id.py  0004_alter_beachscore_beach_id_and_more.py  0005_rename_beach_id_beach_id.py
